Responsive on mobile

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<body>
-    <h1 style='color:#F5B041'>Fanlinc</h1>
-    <p></p>
-    <p style='font-size:18px'><b>
-        Fanlinc exists to foster
-        meaningful relationships between
-        fans, and grow the fervent 
-        passions for the fandoms you love.
-        Interact with other fans, share your ideas and even go to organised events,
-         all while sharing the same common interests in the fandoms you love.
-        </b>
-    </p>
-</body>
+<div class="page-container">
+	<h2>Fanlinc</h2>
+	<p></p>
+	<p>
+		Fanlinc exists to foster
+		meaningful relationships between
+		fans, and grow the fervent
+		passions for the fandoms you love.
+		Interact with other fans, share your ideas and even go to organised events,
+		all while sharing the same common interests in the fandoms you love.
+	</p>
+
+	<div class="text-muted footer">&#169; 2020 emile</div>
+</div>
