--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,39 @@
 <!doctype html>
 <html>
-	<mat-toolbar>
-		<a routerLink='' id='title'>{{title}}</a>
+	<mat-toolbar class='nav-bar'>
+		<a class='title-header' routerLink=''>{{title}}</a>
 
 		<!-- This fills the remaining space of the current row -->
-		<span class="example-fill-remaining-space"></span>
+		<span class="fill-remaining-space"></span>
 
-		<a id='about' routerLink='/about'>About</a>
-		<a id='login' routerLink='/login'>Login</a>
-		<a *ngIf='isShow' style='margin:0 15px 0 0;' title='{{user}}' (click)="navig()"><img id='userImg' src="{{userImg}}">{{user}}</a>
+		<a class='about-header' routerLink='/about'>About</a>
+		<a class='login-header' routerLink='/login'>Login</a>
 
-		<div *ngIf='isShow' ngbDropdown class="d-inline-block">
-			<button class="btn-outline fa fa-bell" id='notif' ngbDropdownToggle><span style='font-size:10px;margin:0 0 0 -2px'> {{numPendings}}</span></button>
-			<div id='dropDownItemBack' ngbDropdownMenu>
-				<p style='padding:10px' *ngFor="let item of pendingNames;">
+		<a class='username-container' *ngIf='isShow' title='{{user}}' (click)="navig()">
+			<img class='user-img' src="{{userImg}}">{{user}}
+		</a>
+		<div class="notif-dropdown-container" *ngIf='isShow' ngbDropdown>
+			<button class="notif-dropdown-button btn-outline fa fa-bell" ngbDropdownToggle>
+				<span class='num-pendings-info'> {{numPendings}}</span>
+			</button>
+			<div class="notif-dropdown-items-container" ngbDropdownMenu>
+				<p class='notif-dropdown-item' *ngFor="let friendUsername of pendingNames;">
 					<span>Friend Request from </span>
-					<a (click)='toUserProfile(item)' id='friend'>{{item}} </a>
-					<button class='btn-outline' (click)='addFriend(item)' id="acceptB">Accept</button></p>
+					<a class='friend-username' (click)='toUserProfile(item)'>{{friendUsername}} </a>
+					<button class='accept-button' (click)='addFriend(item)'>Accept</button>
+				</p>
 			</div>
 		</div>
 
-		<div ngbDropdown class="d-inline-block">
-			<button class="btn-outline" id='menu' ngbDropdownToggle>Menu</button>
-			<div id='dropDownItemBack' ngbDropdownMenu>
-				<button (click)="toPostsPg()" id='dropDownItem' ngbDropdownItem>Posts Feed</button>
-				<button routerLink='/fandoms' id='dropDownItem' ngbDropdownItem>Fandoms</button>
-				<!-- <button id='dropDownItem' ngbDropdownItem>Events</button>
-				<button id='dropDownItem' ngbDropdownItem>Messaging</button> -->
+		<div class="menu-dropdown-container" ngbDropdown>
+			<button class="menu-dropdown-button" ngbDropdownToggle>
+				<span class='menu-icon'>&#9776;</span>
+			</button>
+			<div class='menu-dropdown-items-container' ngbDropdownMenu>
+				<button class='menu-dropdown-item' (click)="toPostsPg()" ngbDropdownItem>Posts Feed</button>
+				<button class='menu-dropdown-item' routerLink='/fandoms' ngbDropdownItem>Fandoms</button>
 			</div>
 		</div>
-
 	</mat-toolbar>
 
 	<body>
