--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,3 @@
-<h2>
-    Welcome to Fanlinc!
-    <p>A place to share</p>
-</h2>
+<div class="page-container">
+	<h3>Welcome to Fanlinc!<p>A place to share</p></h3>
+</div>
