--- a/src/app/new-post/new-post.component.html
+++ b/src/app/new-post/new-post.component.html
@@ -1,21 +1,24 @@
-<body>
+<div class='page-container'>
+	<div class='content-container'>
+		<div class='header'><b>Create a new post</b></div>
 
-    <div id='box'>
-        <h4 style='margin:0 0 20px 0'><b>Create a new post</b></h4>
-        <div>
-        <div><input id='title' #title placeholder='Enter topic title'></div>
-        <div ngbDropdown class="d-inline-block">
-            <button id='dDown' style='width:220px' class="btn-outline" ngbDropdownToggle>Choose a fandom</button>
-            <div id='dropDownItemBack' ngbDropdownMenu>
-              <a style='width:200px' id="{{item}}" [ngStyle]="{'background': fandomBacks[item]}" *ngFor="let item of fandoms" (click)="setFandom(fandom.value)" ngbDropdownItem>{{item}}<input #fandom value="{{item}}" style='display:none'></a>
-            </div>
-        </div>
-        <div><input id='tags' #tags placeholder='Enter tags (e.g: #tag1 #tag2)'></div>
-        <div><input id='image' #image placeholder='Image link (optional)'></div>
-        <div><textarea id='description' #content placeholder='Enter description'></textarea></div>
-        <button id='submit' (click)='createPost(title.value,tags.value,content.value,image.value)'>submit</button>
-        <div style='margin-top:10px;color:red'>{{message}}</div>
-        </div>
-    </div>
+		<div class='first-row'>
+			<div class='title-container'><input class='title' #title placeholder='Enter title'></div>
+			<div class="fandom-filter-dropdown-container" ngbDropdown>
+				<button class='fandom-filter-dropdown-button' ngbDropdownToggle>fandom</button>
+				<div class='fandom-filter-dropdown-item-container' ngbDropdownMenu>
+					<a class='fandom-filter-dropdown-item' id="{{item}}" [ngStyle]="{'background': fandomBacks[item]}"
+						*ngFor="let item of fandoms" (click)="setFandom(fandom.value)" ngbDropdownItem>
+						{{item}}<input #fandom value="{{item}}" style='display: none;'>
+					</a>
+				</div>
+			</div>
+		</div>
 
-</body>
+		<div><input class='tags' #tags placeholder='Enter tags (e.g: #tag1 #tag2)'></div>
+		<div><input class='image' #image placeholder='Image link (optional)'></div>
+		<div><textarea class='description' #content placeholder='Enter description'></textarea></div>
+		<button class='submit-button' (click)='createPost(title.value,tags.value,content.value,image.value)'>submit</button>
+		<div class='err-message' *ngIf="message != ''">{{message}}</div>
+	</div>
+</div>
