--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,95 +1,126 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<div class='page-container'>
+	<div class='page-header'>
+		<span class='page-header-text'><b>Posts Feed</b></span>
+		<span class='page-header-right-container'>
+			<button class='create-post-button' (click)="toNewPost()">Create Post</button>
 
-<div id='header'>
-    <span style='font-size:26px;padding-top:20px'><b>Posts Feed</b></span>
-    <div style='margin:4px 0 0 0;float:right;'>
-        <button id='create-post' (click)="toNewPost()">Create New Post</button>
+			<button class='create-fandom-button' (click)="toNewFandom()">Create Fandom</button>
 
-        <button id='create-fandom' (click)="toNewFandom()">Create New Fandom</button>
+			<!-- <input class='search-fandom-bar' type='text' placeholder='search fandoms'>
+			<button class='search-fandom-button' routerLink='/fandom-list' type="submit"><i class="fa fa-search"></i></button> -->
+		</span>
+	</div>
 
-        <input id='search-bar' type='text' placeholder='search fandoms'>
-        <button id='search-button' routerLink='/fandom-list' type="submit"><i class="fa fa-search"></i></button>
-    </div>
+	<div class='page-content-container'>
+		<div class='scrollmenu-header'>
+			<b>Top 10 Trending Fandoms</b>
+			<button class='view-all-button'routerLink='/fandoms'>view all</button>
+		</div>
+		<div class="scrollmenu-container">
+			<table>
+				<tr>
+					<th *ngFor="let image of fandomImages; let i = index">
+						<input value='{{fandomNames[i]}}' #fdImage style='display: none;'>
+						<a (click)="redirectToFandom(fdImage.value)"><img class='scrollmenu-content-fandom-img' src="{{image}}"></a>
+						<p class='scrollmenu-content-fandom-name' style='text-align: center;'>{{fandomNames[i]}}</p>
+					</th>
+				</tr>
+			</table>
+		</div>
+
+		<div class='post-section-headers'>
+			<div class='header-container'><span class='header'><b>{{postHeader}}</b></span>
+				<span class='buttons-container'>
+					<button class='create-post-button' (click)="toNewPost()">Create Post</button>
+					<div class="sort-dropdown-button-container" ngbDropdown>
+						<button class="sort-dropdown-button" ngbDropdownToggle>Sort by</button>
+						<div class="sort-dropdown-items-container" ngbDropdownMenu>
+							<div class='recent-filter-container'>
+								<div>Recent</div><div><input id='recent-filter' type='checkbox'></div>
+							</div>
+							<div class='pop-filter-container'>
+								<div>Popularity</div><div><input id='pop-filter' type="checkbox"></div>
+							</div>
+							<div class='fandom-filter-dropdown-container' ngbDropdown>
+								<button class="fandom-filter-dropdown-button" ngbDropdownToggle>fandom</button>
+								<div class='fandom-filter-dropdown-items-container' ngbDropdownMenu>
+									<a class='fandom-filter-dropdown-item' id="{{item}}" *ngFor="let item of fandomNames1" (click)="setFandom(fandom.value)" ngbDropdownItem>
+										{{item}}<input #fandom value="{{item}}" style='display: none;'>
+									</a>
+								</div>
+							</div>
+							<div><button class="apply-button" (click)='toSortedPostPg()'>apply</button></div>
+						</div>
+					</div>
+				</span>
+			</div>
+		</div>
+		<div class='row post-section-container'>
+			<div class='column post-section-content-container'>
+				<div class='row post-box' *ngFor="let post of posts; let i = index;"><input style='display: none;' value='{{postIds[i]}}' #postId>
+					<div class='column post-box-left-column'>
+						<input value='{{postAuthors[i]}}' #author style='display: none;'>
+						<a (click)="toUserProfile(author.value)">
+							<img class='user-img' src="{{userImages[i]}}">
+						</a>
+						<hr class='post-box-left-column-separator'>
+						<div>{{postAuthors[i]}}</div>
+					</div>
+
+					<div class='column post-box-main-column'>
+						<div class='post-box-main-column-header'>
+							<span class='post-box-main-column-header-fandom-link'>
+								f/<a (click)="redirectToFandom(postFandoms[i])" *ngIf="postFandoms[i] != 'none-selected'">{{postFandoms[i]}}</a>
+							</span>
+							<span class='post-box-main-column-header-right-section'>
+								<span style='margin-right: 8px;'>{{postTags[i]}}</span>
+								<span style='margin-right: 8px;'>{{postTimestamps[i]}}</span>
+								<span>
+									<a class='delete-post-button' (click)="deletePost(postId.value, author.value)"><i class='fa fa-trash'></i></a>
+								</span>
+							</span>
+						</div>
+						<h6><b>{{postTitles[i]}}</b></h6>
+						<div style='margin-bottom: 10px;'>{{postContents[i]}}</div>
+						<p *ngIf="postImages[i] != ''">
+							<img class='post-box-main-column-content-img' src="{{postImages[i]}}">
+						</p>
+						<button class="btn-outline num-comments-button" (click)="toCommentPg(postId.value)">
+							{{postNumComments[i]}} {{comments[i]}}
+						</button>
+					</div>
+
+					<div class='column post-box-separator'></div>
+					<div class='column post-box-right-column'>
+						<div class='arrow-up' id='arrow-up' (click)='upvote(postId.value, numVotes.value)'></div>
+						<input value='{{postNumVotes[i]}}' #numVotes style='display: none;'>
+						<p id='{{postIds[i]}}' class='numVotes' style='text-align: center;'>{{postNumVotes[i]}}</p>
+						<div class='arrow-down' id='arrow-down' (click)='downvote(postId.value, numVotes.value)'></div>
+					</div>
+				</div>
+			</div>
+
+			<div class='column sort-box'>
+				<b>Sort by:</b>
+
+				<div class="sort-box-content">
+					<div class='recent-filter-container'>
+						<div>Recent</div><div><input id='recent-filter-1' type='checkbox'></div>
+					</div>
+					<div class='pop-filter-container'>
+						<div>Popularity</div><div><input id='pop-filter-1' type="checkbox"></div>
+					</div>
+					<div class='fandom-filter-dropdown-container' ngbDropdown>
+						<button class="fandom-filter-dropdown-button" ngbDropdownToggle>fandom</button>
+						<div class='fandom-filter-dropdown-items-container' ngbDropdownMenu>
+							<a class='fandom-filter-dropdown-item' id="{{item}}" *ngFor="let item of fandomNames1" (click)="setFandom(fandom.value)" ngbDropdownItem>
+								{{item}}<input #fandom value="{{item}}" style='display: none;'>
+							</a>
+						</div>
+					</div>
+					<button class="apply-button" type='submit' (click)='toSortedPostPg()'>Apply</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-<body>
-    <div style='width:100%; margin:-4px 0 0 -15px;'>
-        <b>Top 10 Trending Fandoms</b>
-        <button id='fullList' routerLink='/fandoms'>view all</button>
-    </div>
-    <p></p>
-    <div class="scrollmenu" >
-        <table>
-            <tr>
-                <th style='padding:0' *ngFor="let image of fandomImages; let i = index"><input value='{{fandomNames[i]}}' #fdImage style='display:none'>
-                    <a (click)="redirectToFandom(fdImage.value)"><img src="{{image}}" style="width:100px;height:100px"></a>
-                    <p style="text-align:center">{{fandomNames[i]}}</p>
-                </th>
-            </tr>
-        </table>
-    </div>
-
-    <p></p>
-    <div style='width:100%; margin:10px 0 8px -15px;'><b>{{postHeader}}</b></div>
-    <div class='row' style="width:100%">
-        <div style='width:70%' class='column'>
-            <div *ngFor="let post of posts;let i = index;" class='post-box row'><input value='{{postIds[i]}}' #postId style='display:none'>
-                <div class='column' id='column1'>
-                    <input value='{{postAuthors[i]}}' #author style='display:none'>
-                    <a (click)="toUserProfile(author.value)"><img src="{{userImages[i]}}" alt="user" id='userImg'></a>
-                    <hr style='width:50px;margin:10px auto 5px auto;'>
-                    <div style='font-size:13px;'>{{postAuthors[i]}}</div>
-                </div>
-                <div class='column' id='column2'>
-                    <div id='column2-header'>
-                        <span style='margin:0 20px 0 0'><b>f/<a (click)="redirectToFandom(postFandoms[i])" id='post2Fd' *ngIf="postFandoms[i]!='none-selected'">{{postFandoms[i]}}</a></b></span>
-                        <span style='float:right;text-align: left;'>
-                            <span style='margin:0 15px 0 0'>{{postTags[i]}}</span>
-                            <span>{{postTimestamps[i]}}</span>
-                            <span style='float:right'><a (click)="deletePost(postId.value, author.value)" id='edit'><i class='fa fa-trash'></i></a></span>
-                        </span>
-                    </div>
-                    <h4><b>{{postTitles[i]}}</b></h4>
-                    <div style='margin-bottom: 10px;'>{{postContents[i]}}</div>
-                    <p *ngIf="postImages[i]!=''"><img style='max-width:150px;max-height:300px;' src="{{postImages[i]}}"></p>
-                    <button class="btn-outline" id='comments' (click)="toCommentPg(postId.value)">{{postNumComments[i]}} {{comments[i]}}</button>
-                </div>
-                <div class='column' id='seperator' style='margin:-5px 0 -5px 0;width:1px;background: #E5E7E9;'></div>
-                <div class='column' style='margin:auto auto auto auto'>
-                    <div (click)='upvote(postId.value, numVotes.value)' id='arrow-up'></div>
-                    <input value='{{postNumVotes[i]}}' #numVotes style='display:none'>
-                    <p id='{{postIds[i]}}' class='numVotes' style='text-align: center;'>{{postNumVotes[i]}}</p>
-                    <div (click)='downvote(postId.value, numVotes.value)' id="arrow-down"></div>
-                </div>
-            </div>
-        </div>
-
-        <div id='sort-box' class='column'>
-            <b>Sort by:</b>
-            <div style='margin:5px 0 0 -10px;'>
-            <div style='margin-left:10px' ngbDropdown class="d-inline-block">
-            <!-- <button class="form-control btn-outline" (click)="sortByMostRecent()" id='recent-filter'> -->
-                Most Recent <input id='recent-filter' type="checkbox">
-            <!-- </button> -->
-            </div>
-
-            <div style='margin-left:12px' ngbDropdown class="d-inline-block">
-            <!-- <button class="form-control btn-outline" (click)="sortByPopularity()" id='pop-filter'> -->
-                Popularity <input id='pop-filter' type="checkbox">
-            <!-- </button> -->
-            </div>
-
-            <div ngbDropdown class="d-inline-block">
-                <button id='fandom-filter' class="btn-outline" ngbDropdownToggle>Choose a fandom</button>
-                <div id='dropDownItemBack' ngbDropdownMenu>
-                    <a style='width:200px' id="{{item}}" *ngFor="let item of fandomNames1" id='dropDownItem' (click)="setFandom(fandom.value)" ngbDropdownItem>{{item}}<input #fandom value="{{item}}" style='display:none'></a>
-                </div>
-            </div>
-            </div>
-
-            <p></p>
-            <button class="btn-outline" type='submit' id='apply' (click)='toSortedPostPg()'>Apply</button>
-        </div>
-
-    </div>
-
-</body>
