--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,63 +1,59 @@
-<!doctype html>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-<div id='wrap'>
-	<div class='row'>
-		<div class='column'>
-			<p style='height:130px;width:130px'><img src="{{imagelink}}" alt="user-img" style="width:130px;height:130px;border-radius:50%"></p>
-			<button *ngIf='isShow' id='friendB' (click)="addFriendClicked(username)">{{friendB}}</button>
-			<button *ngIf='isUnfriend' id='friendBUnfriend' (click)="addFriendClicked(username)">{{friendB}}</button>
-			<div><span id='color1'>Username:</span> {{username}}</div>
-			<div><span id='color1'>Email:</span> {{email}}</div>
-			<div><span id='color1'>Age:</span> {{age}}</div>
-			<p></p>
-			<div id='color1'>Bio</div>
-			<textarea id='bio' #biotext value='{{bio}}' type="text" readonly></textarea>
-			<div><span id='color1'>Interests: </span>
-				<div style='width:300px'><button id='existingInterest' *ngFor="let item of interests" [disabled]='true'>{{item}}</button></div>
+<div class='page-container'>
+	<div class='sections-container'>
+		<div class='left-section'>
+			<div class='left-section-upper-area'>
+				<div><img class='user-img' src="{{imagelink}}"></div>
+				<div><button class='friend-button' id='friendB' *ngIf='isShow' (click)="addFriendClicked(username)">{{friendB}}</button></div>
+				<div><button class='friend-button' id='friendBUnfriend' *ngIf='isUnfriend' (click)="addFriendClicked(username)">{{friendB}}</button></div>
 			</div>
+			<div><span class='username app-primary-color'>Username:</span> {{username}}</div>
+			<div><span class='email app-primary-color'>Email:</span> {{email}}</div>
+			<div><span class='age app-primary-color'>Age:</span> {{age}}</div>
 			<p></p>
+			<div class='bio-header app-primary-color'>Bio:</div>
+			<textarea class='bio-box' #biotext value='{{bio}}' type="text" readonly></textarea>
+			<div class='interests-container'>
+				<div class='interest-header app-primary-color'>Interests: </div>
+				<button class='interest-button' *ngFor="let item of interests" [disabled]='true'>{{item}}</button>
+			</div>
 		</div>
 
-		<div class='column'>
-			<div class='row' id='info-box'>
-				<span style='margin:0 15px 0 0'><b>type: </b><button [disabled]='true' id='button1'>{{type}}</button></span>
-				<span><b>level: </b><button [disabled]='true' id='button1'>{{level}}</button></span>
+		<div class='main-section'>
+			<div class='user-type-box'>
+				<span style='margin-right: 15px;'>
+					<b>type: </b><button class='type-button' [disabled]='true'>{{type}}</button>
+				</span>
+				<span>
+					<b>level: </b><button class='level-button' [disabled]='true'>{{level}}</button>
+				</span>
 			</div>
 			<br>
 
-			<div class='row'>
-				<div class='column'>
-					<div><span id='color1'>Fandom Subscriptions</span>
-					</div>
-				
-					<div class="list-group">
-						<a *ngFor="let fandom of fandoms" (click)='toFandomPg(fandomval.value)' class="list-group-item list-group-item-action">
-							<input #fandomval value="{{fandom}}" style="display:none">{{fandom}}</a> 
+			<div class='main-section-columns-container'>
+				<div class='fandoms-column'>
+					<div><span class='fandoms-column-header app-primary-color'>Following</span></div>
+					<div class="list">
+						<a class='list-item' *ngFor="let fandom of fandoms" (click)='toFandomPg(fandomval.value)'>
+							<input style="display: none;" #fandomval value="{{fandom}}">{{fandom}}
+						</a>
 					</div>
 				</div>
-				<p></p>
 
-				<div class='column'>
-					<div><span id='color1'>Friends</span>
-					</div>
-				
-					<div class="list-group">
-							<a *ngFor="let friend of friends" (click)='toUserProfile(friendval.value)' class='list-group-item'>
-								<input #friendval value="{{friend}}" style="display:none">{{friend}}</a>
+				<div class='friends-column'>
+					<div><span class='friends-column-header app-primary-color'>Friends</span></div>
+					<div class="list">
+						<a class='list-item' *ngFor="let friend of friends" (click)='toUserProfile(friendval.value)'>
+							<input style="display: none;" #friendval value="{{friend}}">{{friend}}
+						</a>
 					</div>
 				</div>
-				<p></p>
 			</div>
 		</div>
 	</div>
 
-	<hr>
-	<div style='text-align: center;' *ngIf="!isShow && !isUnfriend">
-		<button style='font-size:12px' mdbBtn color="info" #edit (click)="redirectToEditProfile()">edit profile</button>
-		<button style='font-size:12px' mdbBtn color="info" #save (click)="logout()">Logout</button>
-	</div>		
-	<br><br>
+	<div class='page-footer' *ngIf="!isShow && !isUnfriend">
+		<hr>
+		<button class='edit-button' mdbBtn color="info" #edit (click)="redirectToEditProfile()">edit profile</button>
+		<button class='logout-button' mdbBtn color="info" #save (click)="logout()">logout</button>
+	</div>
 </div>
-
-	
