--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,14 +2,18 @@
 
 .nav-bar {
 	font-size: $base-font-size;
-	padding: 9px 25px;
+	font-family: $base-font-family;
 	background-color: $primary-color;
+	padding: 9px 25px;
 	height: 40px;
 	box-shadow: 0px .7px 0px #c9cccd;
-	font-family: $base-font-family;
 
 	@media screen and (max-width: 768px) {
 		padding: 9px 3%;
+	}
+
+	@media screen and (max-width: 768px) {
+		font-size: $base-font-size - 1px;
 	}
 
 	a {
@@ -23,6 +27,9 @@
 
 	.title-header {
 		font-size: $page-header-font-size;
+		@media screen and (max-width: 425px) {
+			font-size: $page-header-font-size - 2px;
+		}
 	}
 
 	.fill-remaining-space {
@@ -33,7 +40,7 @@
 		margin-right: 30px;
 
 		@media screen and (max-width: 425px) {
-			margin-right: 13px;
+			margin-right: 15px;
 		}
 	}
 
@@ -51,10 +58,14 @@
 			margin-right: 7px;
 
 			@media screen and (max-width: 425px) {
-				height: 28px;
-				width: 28px;
+				height: 25px;
+				width: 25px;
 				margin-right: 4px;
 			}
+		}
+
+		.username {
+			line-height: 25px;
 		}
 	}
 
