--- a/src/app/fandom-page/fandom-page.component.scss
+++ b/src/app/fandom-page/fandom-page.component.scss
@@ -93,6 +93,11 @@
 							@extend %ext-common-button;
 							background-color: $secondary-color;
 							border-color: $secondary-color;
+							height: 24px;
+
+							@media screen and (max-width: 425px) {
+								height: 22px;
+							}
 
 							&:hover {
 								color: grey;
@@ -100,10 +105,19 @@
 						}
 
 						.sort-dropdown-button-container {
+							@media screen and (max-width: 425px) {
+								margin-top: -1px;
+							}
+
 							.sort-dropdown-button {
 								@extend %ext-common-button;
 								color: grey;
 								margin-left: 10px;
+								height: 23.5px;
+
+								@media screen and (max-width: 425px) {
+									height: 21.5px;
+								}
 
 								&:hover {
 									color: $third-color;
