--- a/src/app/fandoms/fandoms.component.scss
+++ b/src/app/fandoms/fandoms.component.scss
@@ -19,13 +19,15 @@
 
 		.create-fandom-button-container {
 			float: right;
-
-			@media (min-width: 426px) and (max-width: 768px) {
-				padding-right: 15px;
-			}
+			line-height: 16px;
+			padding: 5px 0;
 
 			@media screen and (min-width: 769px) {
 				display: none;
+			}
+
+			@media (min-width: 426px) and (max-width: 768px) {
+				padding-right: 15px;
 			}
 
 			.create-fandom-button {
